<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">工程利器</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="des"></string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="hfut">来自合工大</string>
    <string name="back">返回</string>
    <string name="engineer">工程</string>
    <string name="standard">规范</string>
    <string name="setting">设置</string>
    <string name="gangjia">钢架</string>
    <string name="hangjia">桁架</string>
    <string name="initialization">初始化</string>
    <string name="dot">点</string>
    <string name="pole">杆</string>
    <string name="dot_total">节点总数</string>
    <string name="stand_total">支座总数</string>
    <string name="pole_uint_total">杆总数</string>
    <string name="sure">确定</string>
    <string name="pole_unit_order">杆单元编号</string>
    <string name="dot_order">杆端节点编号</string>
    <string name="pole_unit_axis">杆单元截面积</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="result">结果</string>
    <string name="x_coordinate">x轴</string>
    <string name="y_coordinate">y轴</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="dot_num">节点编号</string>
    <string name="coordinate">坐标</string>
    <string name="stress">受力</string>
    <string name="limit">约束</string>
    <string name="calculator">计算</string>
    <string name="more">更多</string>
    <string name="copyright">版权所有</string>
    <string name="about_us">关于我们</string>
    <string name="contact_us">联系我们</string>
    

</resources>
