<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/background_color_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View style="@style/horizontal_line_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/titlebar_bg"
        android:orientation="vertical" >

        <RelativeLayout
            style="@style/linear_item_style"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/dot_num_icon"
                style="@style/linear_icon_style"
                android:contentDescription="@string/des"
                android:src="@drawable/pole_unit_icon" />

            <TextView
                style="@style/linear_lefttv_style"
                android:layout_toRightOf="@id/dot_num_icon"
                android:text="@string/pole_unit_order" />

            <EditText
                android:id="@+id/et_id_pole"
                style="@style/edit_text3_style"
                android:hint="@string/dot_total" >
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            style="@style/linear_item_style"
            android:layout_marginBottom="2dp" >

            <ImageView
                android:id="@+id/coordinate_icon"
                style="@style/linear_icon_style"
                android:contentDescription="@string/des"
                android:src="@drawable/dot_number_icon" />

            <TextView
                style="@style/linear_lefttv_style"
                android:layout_toRightOf="@id/coordinate_icon"
                android:text="@string/dot_order" />

            <LinearLayout
                style="@style/wrap_content_layout"
                android:layout_alignParentRight="true"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/et_node_left"
                    style="@style/edit_text2_style"
                    android:hint="@string/left" >
                </EditText>

                <EditText
                    android:id="@+id/et_node_right"
                    style="@style/edit_text2_style"
                    android:hint="@string/right" >
                </EditText>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            style="@style/linear_item_style"
            android:layout_marginBottom="2dp" >

            <ImageView
                android:id="@+id/stand_num"
                style="@style/linear_icon_style"
                android:contentDescription="@string/des"
                android:src="@drawable/pole_axis_icon" />

            <TextView
                style="@style/linear_lefttv_style"
                android:layout_toRightOf="@id/stand_num"
                android:text="@string/pole_unit_axis" />

            <EditText
                android:id="@+id/et_prop"
                style="@style/edit_text3_style"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/sure_btn_tabbar"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/sure_btn"
        android:text="@string/sure"
        android:textColor="@color/white" />
    <Button
        android:id="@+id/calculator_btn_tabpoint"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="-15dp"
        android:background="@drawable/calculator_btn"
        android:text="@string/calculator"
        android:textColor="@color/white" />

</LinearLayout>