<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/background_color_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View style="@style/horizontal_line_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/titlebar_bg"
        android:orientation="vertical" >

        <RelativeLayout
            style="@style/linear_item_style"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/dot_num_icon"
                style="@style/linear_icon_style"
                android:contentDescription="@string/des"
                android:src="@drawable/dot_num_icon" />

            <TextView
                style="@style/linear_lefttv_style"
                android:layout_toRightOf="@id/dot_num_icon"
                android:text="@string/dot_total" />

            <EditText
                android:id="@+id/edit_node_sum"
                style="@style/edit_text3_style"
                android:hint="@string/dot_total" >
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            style="@style/linear_item_style"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/pole_unit_num"
                style="@style/linear_icon_style"
                android:contentDescription="@string/des"
                android:src="@drawable/pole_num_icon" />

            <TextView
                style="@style/linear_lefttv_style"
                android:layout_toRightOf="@id/pole_unit_num"
                android:text="@string/pole_uint_total" />

            <EditText
                android:id="@+id/edit_pole_sum"
                style="@style/edit_text3_style"
                android:hint="@string/pole_uint_total" >
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            style="@style/linear_item_style"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/stand_num"
                style="@style/linear_icon_style"
                android:contentDescription="@string/des"
                android:src="@drawable/stand_num_icon" />

            <TextView
                style="@style/linear_lefttv_style"
                android:layout_toRightOf="@id/stand_num"
                android:text="@string/stand_total" />

            <EditText
                android:id="@+id/edit_support_sum"
                style="@style/edit_text3_style"
                android:hint="@string/stand_total" >
            </EditText>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/sure_btn_tabnew"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/sure_btn"
        android:text="@string/sure"
        android:textColor="@color/white" />

</LinearLayout>