<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/top_img"
        android:contentDescription="@string/des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_show" 
        />
    <RelativeLayout
        android:id="@+id/left_drawer"
        style="@style/match_parent_layout"
        android:background="@color/black"
        >
        
        <RelativeLayout 
            android:id="@+id/line_01"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_alignParentTop="true"
            >
            <ImageView 
                android:id="@+id/engineer_icon"
                android:contentDescription="@string/des"
                style="@style/left_icon_style"
                android:background="@drawable/engineer"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                />
            <TextView 
                android:id="@+id/engineer_tv"
                android:text="@string/engineer"
                android:layout_toRightOf="@id/engineer_icon"
                style="@style/setting_tv_style"
                />
            <ImageView
                android:contentDescription="@string/des"
                style="@style/icon_right_icon_style"
                android:background="@drawable/left"
                />
            
        </RelativeLayout>
        <View 
            android:id="@+id/horizontal_line_01"
            style="@style/horizontal_line_style"
            android:layout_below="@id/line_01"
            />
        <RelativeLayout 
            android:id="@+id/line_02"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_below="@id/horizontal_line_01"
            >
            <ImageView 
                android:id="@+id/standard_icon"
                android:contentDescription="@string/des"
                style="@style/left_icon_style"
                android:background="@drawable/standard"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                />
            <TextView 
                android:id="@+id/standard_tv"
                android:text="@string/standard"
                android:layout_toRightOf="@id/standard_icon"
                style="@style/setting_tv_style"
                />
            <ImageView
                android:contentDescription="@string/des"
                style="@style/icon_right_icon_style"
                android:background="@drawable/left"
                />
            
        </RelativeLayout>
        <View 
            android:id="@+id/horizontal_line_02"
            style="@style/horizontal_line_style"
            android:layout_below="@id/line_02"
            />
        <RelativeLayout 
            android:id="@+id/line_03"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_below="@id/horizontal_line_02"
            >
            <ImageView 
                android:id="@+id/setting_icon"
                android:contentDescription="@string/des"
                style="@style/left_icon_style"
                android:background="@drawable/setting"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                />
            <TextView 
                android:id="@+id/setting"
                android:text="@string/setting"
                android:layout_toRightOf="@id/setting_icon"
                style="@style/setting_tv_style"
                />
            <ImageView
                android:contentDescription="@string/des"
                style="@style/icon_right_icon_style"
                android:background="@drawable/left"
                />
            
        </RelativeLayout>
        <View 
            android:id="@+id/horizontal_line_03"
            style="@style/horizontal_line_style"
            android:layout_below="@id/line_03"
            />
        
    </RelativeLayout>
    
</LinearLayout>
